Fix : Page Alignment in mobile

--- a/src/pages/Explore/Explore.module.css
+++ b/src/pages/Explore/Explore.module.css
@@ -48,7 +48,7 @@
   .videos_container {
     flex-direction: column;
     justify-content: flex-start;
-    align-content: flex-start;
+    align-content: center;
     flex-grow: 1;
     padding: 0;
   }
